app quit when close window, control button fix padding so there's no scrollbar

--- a/web/stylesheet.css
+++ b/web/stylesheet.css
@@ -1,13 +1,10 @@
-.top-image {
-    width: 95%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    display: block;
+.small-margin {
+    margin: 10px auto auto auto;
 }
-.input-ip {
-    margin-top: 10px
+
+.bottom-button {
+    margin: 10px auto auto auto;
+    display: block;
 }
 
 .form-div {
@@ -15,6 +12,6 @@
     display: block;
 }
 
-.nav-button {
-    display: inline;
+.auto-margin {
+    margin: auto
 }
